generate_API_yaml/20241203131547/Red/ContainerAPI/getpartswithswproperty-23-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: getpartswithswproperty-23-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: apikey, vmc-step2-bom-acl , getpartswithswproperty-rewrite-path
spec:
  rules:
  - host: vmc-osb.hm.jp.honda.com
    http:
      paths:
      - backend:
          serviceName: vmcbom-services-public-rex-apiv1
          servicePort: 80
        path: /vmcbom/v1/GetPartsWithSWProperty
        pathType: ImplementationSpecific
